--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/dukeblue2017/bitschange#readme",
   "dependencies": {
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "mysql": "^2.15.0",
     "nodemon": "^1.15.1"
   }
 }
