--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
-    "mysql": "^2.15.0",
+    "knex": "^0.14.4",
     "nodemon": "^1.15.1"
   }
 }
