--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
     "express": "^4.16.2",
     "knex": "^0.14.4",
     "nodemon": "^1.15.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
