--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "knex": "^0.14.4",
+    "mysql": "^2.15.0",
     "nodemon": "^1.15.1"
   },
   "devDependencies": {
