--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "knex": "^0.14.4",
     "mysql": "^2.15.0",
     "nodemon": "^1.15.1"
