Make progress on balances and set up NPM scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A pretend cryptocurrency exchange.",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "build-client": "cd bitschange-client && npm run build",
+    "start-dev": "concurrently \"nodemon server/index.js\" \"cd bitschange-client && npm run start\"",
+    "start-production": "npm run build-client && nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
